--- a/backend-many/package.json
+++ b/backend-many/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "backend-server",
+  "name": "backend-many",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.5.7",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "hono": "^4.5.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.6",
-    "@types/ws": "^8.5.12",
     "wrangler": "^3.57.2"
   }
 }
